added recursion questions